force-app/main/default/objects/vlocity_cmt__ObjectFieldAttribute__c/fields/vlocity_cmt__AttributeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AttributeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vlocity Attribute</label>
    <referenceTo>vlocity_cmt__Attribute__c</referenceTo>
    <relationshipName>ObjectFieldAttributes</relationshipName>
    <type>Lookup</type>
</CustomField>