force-app/main/default/objects/vlocity_cmt__ObjectFieldAttribute__c/fields/vlocity_cmt__FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__FieldApiName__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>