force-app/main/default/objects/vlocity_cmt__ObjectFieldAttribute__c/fields/vlocity_cmt__ObjectClassId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ObjectClassId__c</fullName>
    <label>Vlocity Object Class</label>
    <referenceTo>vlocity_cmt__ObjectClass__c</referenceTo>
    <relationshipLabel>Vlocity Object Field Attributes</relationshipLabel>
    <relationshipName>ObjectFieldAttributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>