force-app/main/default/objects/vlocity_cmt__ObjectFieldAttribute__c/fields/vlocity_cmt__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ObjectType__c</fullName>
    <label>Object Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>