force-app/main/default/objects/vlocity_cmt__ObjectFieldAttribute__c/fields/vlocity_cmt__SubClassId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__SubClassId__c</fullName>
    <label>Subclass</label>
    <length>18</length>
    <type>Text</type>
</CustomField>