force-app/main/default/objects/vlocity_cmt__ObjectFieldAttribute__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_cmt__FieldApiName__c</columns>
    <columns>vlocity_cmt__AttributeId__c</columns>
    <columns>vlocity_cmt__ObjectType__c</columns>
    <columns>vlocity_cmt__SubClassId__c</columns>
    <columns>vlocity_cmt__ObjectClassId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>